Automatizo web saucedemo

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,45 @@ node_modules/
 /reports/
 /playwright/videos/
 playwright/screenshots/
+
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,playframework
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,playframework
+
+# Ignore Play! working directory #
+.idea/
+bin/
+/db
+.eclipse
+/lib/
+/logs/
+/modules
+/project/project
+/project/target
+/target
+tmp/
+test-result
+server.pid
+*.eml
+/dist/
+.cache
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,playframework
